--- a/OctoAwesome/OctoAwesome.Client/Languages/OctoClient.resx
+++ b/OctoAwesome/OctoAwesome.Client/Languages/OctoClient.resx
@@ -223,6 +223,6 @@
     <value>Resume</value>
   </data>
   <data name="ToMainMenu" xml:space="preserve">
-    <value>Main Menu</value>
+    <value>To Main Menu</value>
   </data>
 </root>
